// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<Text /> > defaults to the correct HTML element > renders the correct element for <Text variant={body} /> 1`] = `
<body>
  <div>
    <p
      class="_text_7d5a54 _body_7d5a54 _dark_7d5a54"
    >
      Example
    </p>
  </div>
</body>
`;

exports[`<Text /> > defaults to the correct HTML element > renders the correct element for <Text variant={extra-small} /> 1`] = `
<body>
  <div>
    <p
      class="_text_7d5a54 _extra-small_7d5a54 _dark_7d5a54"
    >
      Example
    </p>
  </div>
</body>
`;

exports[`<Text /> > defaults to the correct HTML element > renders the correct element for <Text variant={intro-lede} /> 1`] = `
<body>
  <div>
    <p
      class="_text_7d5a54 _intro-lede_7d5a54 _dark_7d5a54"
    >
      Example
    </p>
  </div>
</body>
`;

exports[`<Text /> > defaults to the correct HTML element > renders the correct element for <Text variant={small} /> 1`] = `
<body>
  <div>
    <p
      class="_text_7d5a54 _small_7d5a54 _dark_7d5a54"
    >
      Example
    </p>
  </div>
</body>
`;
